github link update

--- a/rajendra_profile.html
+++ b/rajendra_profile.html
@@ -239,7 +239,7 @@
                 </div>
                 <h1 class="name">Rajendra Khope</h1>
                 <p class="title">Passionate Maker</p>
-                <a href="https://rajendrakhope.com" class="website" target="_blank">🌐 rajendrakhope.com</a> <a href="https://rajendrakhope.com" class="website" target="_blank">🐙 GitHub</a>
+                <a href="https://rajendrakhope.com" class="website" target="_blank">🌐 rajendrakhope.com</a> <a href="https://github.com/bkrajendra" class="website" target="_blank">🐙 GitHub</a>
             </div>
             
             <div class="content">
